--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@teamhanko/passkeys-next-auth-provider": "^0.3.1",
-    "@vercel/kv": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.394.0",
+    "net": "^1.0.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
-    "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
+    "redis": "^4.6.14",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.4",
