--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "netlify": "^13.1.18",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5",
