--- a/package.json
+++ b/package.json
@@ -12,30 +12,32 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@teamhanko/passkeys-next-auth-provider": "^0.3.1",
+    "@upstash/redis": "^1.31.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.394.0",
     "net": "^1.0.2",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "redis": "^4.6.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tls": "^0.0.1"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.7.0",
     "@next/bundle-analyzer": "^14.2.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.5.0",
     "eslint-config-next": "14.2.3",
     "netlify": "^13.1.18",
-    "postcss": "^8",
+    "netlify-cli": "^17.27.0",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5",
+    "typescript": "^5.4.5",
     "vercel": "^34.2.7"
   }
 }
