--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@teamhanko/passkeys-next-auth-provider": "^0.3.1",
-    "@upstash/redis": "^1.31.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.394.0",
     "net": "^1.0.2",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tls": "^0.0.1"
