--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.394.0",
+    "maath": "^0.10.7",
     "net": "^1.0.2",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
