--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/three": "^0.165.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.394.0",
     "maath": "^0.10.7",
@@ -32,7 +33,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.165.0",
-    "tls": "^0.0.1"
+    "tls": "^0.0.1",
+    "to-shavian": "^0.3.1"
   },
   "devDependencies": {
     "@netlify/functions": "^2.7.0",
