--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
   "devDependencies": {
     "@netlify/functions": "^2.7.0",
     "@next/bundle-analyzer": "^14.2.4",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.5.0",
+    "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "netlify": "^13.1.18",
     "netlify-cli": "^17.27.0",
     "postcss": "^8.4.38",
+    "supports-color": "^9.4.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "vercel": "^34.2.7"
