--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -34,7 +35,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.165.0",
     "tls": "^0.0.1",
-    "to-shavian": "^0.3.1"
+    "to-shavian": "^0.3.1",
+    "troika-three-text": "^0.49.1"
   },
   "devDependencies": {
     "@netlify/functions": "^2.7.0",
